@@ -778,6 +778,11 @@ static print_field_t *_get_print_field(char *object)
 		field->name = xstrdup("UsageThres");
 		field->len = 10;
 		field->print_routine = print_fields_double;
+	} else if (!xstrncasecmp("LimitFactor", object, MAX(command_len, 6))) {
+		field->type = PRINT_LF;
+		field->name = xstrdup("LimitFactor");
+		field->len = 11;
+		field->print_routine = print_fields_double;
 	} else if (!xstrncasecmp("Allocated", object, MAX(command_len, 7))) {
 		field->type = PRINT_ALLOCATED;
 		field->name = xstrdup("% Allocated");
@@ -2189,6 +2194,11 @@ extern void sacctmgr_print_qos_limits(slurmdb_qos_rec_t *qos)
 		printf("  UsageThreshold           = NONE\n");
 	else if (qos->usage_thres != NO_VAL)
 		printf("  UsageThreshold           = %.4lf\n", qos->usage_thres);
+
+	if (qos->limit_factor == INFINITE)
+		printf("  LimitFactor              = NONE\n");
+	else if(qos->limit_factor != NO_VAL)
+		printf("  LimitFactor              = %.4lf\n", qos->limit_factor);
 
 }
 
